--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body
+    class="bg-primary-subtle vw-100 d-flex flex-column align-items-center p-5"
+  >
+    <form action="#" method="post" class="w-75">
+      <div class="mb-3">
+        <label class="form-label" for="name">Nombre</label
+        ><input class="form-control" id="name" type="text" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="surname">Apellido</label
+        ><input class="form-control" id="surname" type="text" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="birthdate">Fecha de nacimiento</label
+        ><input class="form-control" id="birthdate" type="date" />
+      </div>
+    </form>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
