--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <label class="form-label" for="birthdate">Fecha de nacimiento</label
         ><input class="form-control" id="birthdate" type="date" />
       </div>
+      <button class="btn btn-primary" type="submit">Enviar</button>
     </form>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
